fix(editor): implement BrandFooter component for enhanced footer management in BrandEditor; update Editor to utilize new footer structure and improve readability

--- a/packages/react-editor/src/styles.css
+++ b/packages/react-editor/src/styles.css
@@ -55,6 +55,22 @@
   @apply courier-w-full courier-h-full courier-flex courier-items-center courier-justify-center courier-pb-10;
 }
 
+.courier-editor-readonly {
+  @apply courier-pointer-events-none;
+
+  .ProseMirror {
+    @apply courier-cursor-default courier-p-0;
+
+    .react-renderer {
+      @apply courier-cursor-default;
+
+      .draggable-item {
+        @apply courier-p-0;
+      }
+    }
+  }
+}
+
 .courier-theme-editor-main {
   @apply courier-bg-white courier-rounded-lg courier-border courier-border-border courier-shadow-sm courier-max-w-2xl courier-select-none courier-self-center courier-w-full;
 
